--- a/index.html
+++ b/index.html
@@ -139,10 +139,11 @@
 
 <div class="copyright">
   <div class="container">
-    <div class="col-md-6">
+    <div class="row">
+    <div class="col-md-4">
       <p>© 2019 - All Rights with me</p>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-8">
       <ul class="bottom_ul">
         <li><a href="http://webenlance.com">mysite.com</a></li>
         <li><a href="http://webenlance.com">About us</a></li>
@@ -152,6 +153,7 @@
         <li><a href="http://webenlance.com">Site Map</a></li>
       </ul>
     </div>
+      </div>
   </div>
 </div>
 
