--- a/index.html
+++ b/index.html
@@ -16,23 +16,6 @@
   <!-- sytles used for the footer of the page -->
   <link rel="stylesheet" href="assets/css/footer.css">
 
-  <script>
-      function init() {
-          window.addEventListener('scroll', function(e){
-              var distanceY = window.pageYOffset || document.documentElement.scrollTop,
-                  shrinkOn = 300,
-                  header = document.querySelector("header");
-              if (distanceY > shrinkOn) {
-                  classie.add(header,"smaller");
-              } else {
-                  if (classie.has(header,"smaller")) {
-                      classie.remove(header,"smaller");
-                  }
-              }
-          });
-      }
-      window.onload = init();
-  </script>
   </head>
 
 
@@ -47,9 +30,7 @@
               inside out
           </h1>
           <nav>
-              <a href="">Lorem</a>
-              <a href="">Ipsum</a>
-              <a href="">Dolor</a>
+              
           </nav>
       </div>
   </header><!-- /header -->
@@ -164,6 +145,9 @@
 
   <!-- sytles used for the header and body of the page -->
   <script src="assets/js/header-resize.js"></script>
+
+<!-- All Javascript used in the app that is custom will come from the app.js file -->
+<script src="assets/js/app.js"></script>
 
   </body>
   </div><!-- /#wrapper -->
