added style.css to assets/css and included css for top navigation menu.  linked assets/css/style.css to the index.html page.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
    <!-- sytles used for the header and body of the page -->
   <link rel="stylesheet" href="assets/css/header-resize.css">
+
+  <!-- sytles used for the menu -->
+  <link rel="stylesheet" href="assets/css/style.css">
+
   <!-- sytles used for the footer of the page -->
   <link rel="stylesheet" href="assets/css/footer.css">
 
