added loader to the index.html and dynamically display it once it has been loaded. As soon as the page has completed loading in full we remove the div and allow for page interactions.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
 <!-- All Javascript used in the app that is custom will come from the app.js file -->
 <script src="assets/js/app.js"></script>
 
-  </div><!-- /#wrapper -->
+</div><!-- /#wrapper -->
+<div id="loaderDiv"></div>
+<script>$("#loaderDiv").fadeIn("slow");</script>
   </body>
 
 
